--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Web ptoject",
   "main": "index.js",
   "scripts": {
-    "start":"nodemon app.js",
+    "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +22,13 @@
     "dotenv": "^16.0.3",
     "exif": "^0.6.0",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
+    "sharp": "^0.31.2",
     "underscore": "^1.13.6"
   }
 }
